html mis à jour

--- a/index.html
+++ b/index.html
@@ -266,74 +266,80 @@
     <aside>
         <h2>Activités à Marseille</h2>
 
-        <div class="ativités">
+        <div class="ativites">
 
-            <div class="card">
-                <a href="#"><img src="images/activites/3_medium/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg" alt="
+            <figure class="card-vieux-port">
+                <img src="images/activites/2_large/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg " class="img-port" alt="
                         Vieux-Port">
-                    <h4><b>Vieux-Port</b></h4>
-                </a>
+                <figcaption><b>Vieux-Port</b></figcaption>
+            </figure>
 
-            </div>
 
-            <div class="card">
-                <a href="#"><img src="images/activites/3_medium/paul-hermann-QFTrLdQIRhI-unsplash.jpg" alt="
+            <figure class="card-pomegue">
+                <img src="images/activites/2_large/paul-hermann-QFTrLdQIRhI-unsplash.jpg" class="img-pomegues" alt="
                     Fort-de-Pomègues">
-                    <h4><b>Fort de Pomègues</b>
-                    </h4>
-                </a>
-            </div>
+                <figcaption><b>Fort de Pomègues</b></figcaption>
+            </figure>
 
-            <div class="card">
-                <a href="#"><img src="images/activites/3_medium/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg" alt="
+            <figure class="card">
+                <img src="images/activites/2_large/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg" class="img-calanques"
+                    alt="
                     Parc-national-des-Calanques">
-                    <h4><b>Parc national des Calanques</b></h4>
-                </a>
-            </div>
+                <figcaption><b>Parc national des Calanques</b></figcaption>
+            </figure>
 
-            <div class="card">
-                <a href="#"><img src="images/activites/3_medium/florian-wehde-xW9e8gdotxI-unsplash.jpg" alt="
+            <figure class="card-garde">
+                <img src="images/activites/2_large/florian-wehde-xW9e8gdotxI-unsplash.jpg" class="img-garde" alt="
                     Notre-Dame-de-la-Garde">
-                    <h4><b>Notre-Dame-de-la-Garde</b></h4>
-                </a>
-            </div>
+                </figcaption><b>Notre-Dame-de-la-Garde</b></figcaption>
+            </figure>
 
         </div>
     </aside>
     <!--footer-->
 
     <footer>
-        <div class="contenair">
-            <b>
-                <p>À-propos</p>
-            </b>
-            <a href="#">
-                <p>Fonctionnement du site</p>
-                <p>Conditions générales</p>
-                <p>Donnéés et confidentialité</p>
-            </a>
-        </div>
+        <section class="propos">
+            <h3>A propos</h3>
+            <ul>
+                <li>
+                    <a href="#">Fonctionnement du site </a>
+                </li>
 
-        <div class="contenair">
-            <b>
-                <p>Nos hébergements</p>
-            </b>
-            <a href="#">
-                <p>Charte qualité</p>
-                <p>Proposer votre hôtel</p>
-            </a>
-        </div>
+                <li>
+                    <a href="#">Conditions générales de vente</a>
+                </li>
 
-        <div class="contenair">
-            <b>
-                <p>Assitance</p>
-            </b>
-            <a href="#">
-                <p>Centre d'aide</p>
-                <p>Nous contacter</p>
-            </a>
-        </div>
+                <li>
+                    <a href="#">Données et confidentialité</a>
+                </li>
+            </ul>
+        </section>
 
+        <section class="nos-hebergements">
+            <h3>Nos hébergements</h3>
+            <ul>
+                <li>
+                    <a href="#"> Charte qualité</a>
+                </li>
+
+                <li>
+                    <a href="#">Soumettre vôtre hôtel</a>
+                </li>
+            </ul>
+        </section>
+
+        <section class="assist">
+            <h3>Assistance</h3>
+            <ul>
+                <li>
+                    <a href="#"> Centre d'aide</a>
+                </li>
+                <li>
+                    <a href="#"> Nous contacter</a>
+                </li>
+            </ul>
+        </section>
     </footer>
 
 </body>
