Code html à jour, corrigé

--- a/index.html
+++ b/index.html
@@ -16,31 +16,29 @@
     <!-- début nav -->
     <nav>
         <img src="images/logo/Booki.png" alt="logo-de-Booki">
-        <a href="#">
-            <ul>
-                <li>
-                    <a href="#hebergements">Hébergements</a>
-                </li>
-                <li>
-                    <a href="#Activités">Activités</a>
-                </li>
-            </ul>
-        </a>
+
+        <ul>
+            <li>
+                <a href="#hebergements">Hébergements</a>
+            </li>
+            <li>
+                <a href="#Activités">Activités</a>
+            </li>
+        </ul>
+
     </nav>
     <!-- Fin nav -->
 
     <!-- Début header -->
 
     <header>
-
-        <h1>Trouver votre hébergement pour des vacances de rêves </h1>
-        <p>En plein centre-ville ou en plein nature</p>
-        <form method="postt">
+        <h1>Trouvez votre hébergement pour des vacances de rêve</h1>
+        <p>En plein centre-ville ou en pleine nature</p>
+        <form method="post">
             <i class="fa-solid fa-location-dot"></i>
-
             <input type="search" placeholder="Marseille, France">
-            <button class="desktop_button">Rechercher</button>
-            <button class="mobile_button">
+            <button class="desktop-button" type="submit">Rechercher</button>
+            <button class="mobile-button" type="submit">
                 <i class="fa-solid fa-magnifying-glass"></i>
             </button>
         </form>
@@ -55,8 +53,8 @@
                 <b>Economique</b>
             </li>
             <li>
-                <i class="fa-solid fa-person">
-                    </b>Familial</b>
+                <i class="fa-solid fa-person"></i>
+                <b>Familial</b>
             </li>
 
             <li>
@@ -64,8 +62,8 @@
                 <b>Romantique</b>
             </li>
             <li>
-                <i class="fa-solid fa-dog"></i>A
-                <b>nimaux autorisés</b>
+                <i class="fa-solid fa-dog"></i>
+                <b>Animaux autorisés</b>
             </li>
         </ul>
 
@@ -78,13 +76,12 @@
             <h2>Hébergement à Marseille</h2>
             <!-- 1re ligne -->
             <a href="#">
-                <figure class="carte-hébergement">
+                <figure class="carte-hebergement">
                     <img src="images/hebergements/3_medium/marcus-loke-WQJvWU_HZFo-unsplash.jpg"
                         class="img-accommodations" alt="Photo-de-l'auberge-canebiere">
                     <figcaption class="description-carte">
                         <h3>Auberge Canebière</h3>
-                        <P>Nuit à partir de <b>25€</b>
-                        <P>
+                        <p>Nuit à partir de <b>25€</b></p>
                         <figure class="note-hebergement">
                             <i class="fa-solid fa-star"></i>
                             <i class="fa-solid fa-star"></i>
@@ -97,13 +94,12 @@
             </a>
 
             <a href="#">
-                <figure class="carte-hébergement">
+                <figure class="carte-hebergement">
                     <img src="images/hebergements/3_medium/fred-kleber-gTbaxaVLvsg-unsplash.jpg"
                         class="img-accommodations" alt="Photo-de-l'hôtel-du-port">
                     <figcaption class="description-carte">
                         <h3>Hôtel du port</h3>
-                        <P>Nuit à partir de <b>52€</b>
-                        <P>
+                        <p>Nuit à partir de <b>52€</b></p>
                         <figure class="note-hebergement">
                             <i class="fa-solid fa-star"></i>
                             <i class="fa-solid fa-star"></i>
@@ -117,13 +113,12 @@
 
 
             <a href="#">
-                <figure class="carte-hébergement">
+                <figure class="carte-hebergement">
                     <img src="images/hebergements/3_medium/reisetopia-B8WIgxA_PFU-unsplash.jpg"
                         class="img-accommodations" alt="Photo-de-l'hôtel-les-mouettes">
                     <figcaption class="description-carte">
                         <h3>Hôtel Les mouettes</h3>
-                        <P>Nuit à partir de <b>76€</b>
-                        </P>
+                        <p>Nuit à partir de <b>76€</b></p>
                         <figure class="note-hebergement">
                             <i class="fa-solid fa-star"></i>
                             <i class="fa-solid fa-star"></i>
@@ -137,15 +132,13 @@
 
             <!-- 2eme ligne -->
 
-
             <a href="#">
                 <figure class="carte-hébergement">
                     <img src="images/hebergements/3_medium/annie-spratt-Eg1qcIitAuA-unsplash.jpg"
                         class="img-accommodations" alt="Photo-de-l'hôtel-de-la-mer">
                     <figcaption class="description-carte">
                         <h3>Hôtel de la mer</h3>
-                        <p>Nuit à partir de <b>46€</b>
-                        <p>
+                        <p>Nuit à partir de <b>46€</b></p>
                         <figure class="note-hebergement">
                             <i class="fa-solid fa-star"></i>
                             <i class="fa-solid fa-star"></i>
@@ -156,7 +149,6 @@
                     </figcaption>
                 </figure>
             </a>
-
 
             <a href="#">
                 <figure class="carte-hébergement">
@@ -164,8 +156,7 @@
                         class="img-accommodations" alt="Photo-de-l'auberge-le-panier">
                     <figcaption class="description-carte">
                         <h3>Auberge le panier</h3>
-                        <p>Nuit à partir de <b>23€</b>
-                        <p>
+                        <p>Nuit à partir de <b>23€</b></p>
                         <figure class="note-hebergement">
                             <i class="fa-solid fa-star"></i>
                             <i class="fa-solid fa-star"></i>
@@ -175,9 +166,7 @@
                         </figure>
                     </figcaption>
                 </figure>
-
             </a>
-
 
             <a href="#">
                 <figure class="carte-hébergement">
@@ -185,8 +174,7 @@
                         class="img-accommodations" alt="Photo-de-l'hôtel-chez-Amina">
                     <figcaption class="description-carte">
                         <h3>Hôtel Chez Amina</h3>
-                        <p>Nuit à partir de <b>96€</b>
-                        <p>
+                        <p>Nuit à partir de <b>96€</b></p>
                         <figure class="note-hebergement">
                             <i class="fa-solid fa-star"></i>
                             <i class="fa-solid fa-star"></i>
@@ -198,6 +186,7 @@
                 </figure>
             </a>
             <a href="#" class="afficher">Afficher Plus</a>
+
         </section>
 
         <!-- article dans main -->
@@ -266,36 +255,33 @@
     <aside>
         <h2>Activités à Marseille</h2>
 
-        <div class="ativites">
-
+        <div class="activites">
             <figure class="card-vieux-port">
-                <img src="images/activites/2_large/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg " class="img-port" alt="
-                        Vieux-Port">
+                <img src="images/activites/2_large/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg" class="img-port"
+                    alt="Vieux-Port">
                 <figcaption><b>Vieux-Port</b></figcaption>
             </figure>
 
-
             <figure class="card-pomegue">
-                <img src="images/activites/2_large/paul-hermann-QFTrLdQIRhI-unsplash.jpg" class="img-pomegues" alt="
-                    Fort-de-Pomègues">
+                <img src="images/activites/2_large/paul-hermann-QFTrLdQIRhI-unsplash.jpg" class="img-pomegues"
+                    alt="Fort-de-Pomègues">
                 <figcaption><b>Fort de Pomègues</b></figcaption>
             </figure>
 
-            <figure class="card">
+            <figure class="card-calanques">
                 <img src="images/activites/2_large/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg" class="img-calanques"
-                    alt="
-                    Parc-national-des-Calanques">
+                    alt="Parc-national-des-Calanques">
                 <figcaption><b>Parc national des Calanques</b></figcaption>
             </figure>
 
             <figure class="card-garde">
-                <img src="images/activites/2_large/florian-wehde-xW9e8gdotxI-unsplash.jpg" class="img-garde" alt="
-                    Notre-Dame-de-la-Garde">
-                </figcaption><b>Notre-Dame-de-la-Garde</b></figcaption>
+                <img src="images/activites/2_large/florian-wehde-xW9e8gdotxI-unsplash.jpg" class="img-garde"
+                    alt="Notre-Dame-de-la-Garde">
+                <figcaption><b>Notre-Dame-de-la-Garde</b></figcaption>
             </figure>
-
         </div>
     </aside>
+
     <!--footer-->
 
     <footer>
@@ -303,44 +289,40 @@
             <h3>A propos</h3>
             <ul>
                 <li>
-                    <a href="#">Fonctionnement du site </a>
+                    <a href="#">Fonctionnement du site</a>
                 </li>
-
                 <li>
                     <a href="#">Conditions générales de vente</a>
                 </li>
-
                 <li>
                     <a href="#">Données et confidentialité</a>
                 </li>
             </ul>
         </section>
-
         <section class="nos-hebergements">
             <h3>Nos hébergements</h3>
             <ul>
                 <li>
-                    <a href="#"> Charte qualité</a>
+                    <a href="#">Charte qualité</a>
                 </li>
-
                 <li>
-                    <a href="#">Soumettre vôtre hôtel</a>
+                    <a href="#">Soumettre votre hôtel</a>
                 </li>
             </ul>
         </section>
-
         <section class="assist">
             <h3>Assistance</h3>
             <ul>
                 <li>
-                    <a href="#"> Centre d'aide</a>
+                    <a href="#">Centre d'aide</a>
                 </li>
                 <li>
-                    <a href="#"> Nous contacter</a>
+                    <a href="#">Nous contacter</a>
                 </li>
             </ul>
         </section>
     </footer>
+
 
 </body>
 
